[gd_scene load_steps=7 format=3 uid="uid://x3xnto5mnjxa"]

[ext_resource type="Script" uid="uid://dldbcy6wsvwjn" path="res://script/ui/code_editor.gd" id="1_4u8nx"]
[ext_resource type="Texture2D" uid="uid://d2h0al4tqjfkr" path="res://assets/custom/code_editor_bg.png" id="2_ekuvk"]
[ext_resource type="Script" uid="uid://x5o0de18q6vy" path="res://script/ui/panel.gd" id="2_gxcp6"]
[ext_resource type="Script" uid="uid://c15jh1h6fw4fv" path="res://script/backend/get_question.gd" id="3_s7u5r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cllkv"]
texture = ExtResource("2_ekuvk")
region_rect = Rect2(5, 6, 70, 66)

[sub_resource type="CodeHighlighter" id="CodeHighlighter_tiu1r"]
number_color = Color(1, 0.72156864, 0.42352942, 1)
symbol_color = Color(0.67058825, 0.69803923, 0.7490196, 1)
function_color = Color(0.8980392, 0.7529412, 0.48235294, 1)
member_variable_color = Color(0.38039216, 0.6862745, 0.9372549, 1)
keyword_colors = {
"False": Color(0.8980392, 0.7529412, 0.48235294, 1),
"True": Color(0.8980392, 0.7529412, 0.48235294, 1),
"if": Color(0.7764706, 0.47058824, 0.8666667, 1)
}
color_regions = {
"\" \"": Color(0.81960785, 0.6039216, 0.4, 1),
"' '": Color(1, 0.72156864, 0.42352942, 1)
}

[node name="CodeEditor" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -527.0
offset_bottom = 645.112
grow_horizontal = 0
script = ExtResource("1_4u8nx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 21.0
offset_right = -13.0
offset_bottom = -20.112
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_cllkv")
script = ExtResource("2_gxcp6")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 38.0
offset_top = 17.0
offset_right = 128.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Code Editor"

[node name="Close" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 434.0
offset_top = 13.0
offset_right = 452.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "X"

[node name="QuestionLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 51.0
offset_right = 485.0
offset_bottom = 74.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "If you are seeing this that means backend isnt online"
autowrap_mode = 3

[node name="CodeEdit" type="CodeEdit" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 120.0
offset_right = 475.0
offset_bottom = 460.0
theme_override_colors/selection_color = Color(0.5, 0.5, 0.5, 1)
caret_blink = true
syntax_highlighter = SubResource("CodeHighlighter_tiu1r")
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
gutters_draw_line_numbers = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="Run" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 464.0
offset_right = 476.0
offset_bottom = 495.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Run"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -97.0
offset_right = -33.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="OutputLabel" type="Label" parent="Panel/ScrollContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "output is displayed here"
autowrap_mode = 3

[node name="QuestionApi" type="Node" parent="."]
script = ExtResource("3_s7u5r")

[node name="HttpRequest" type="HTTPRequest" parent="QuestionApi"]

[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Panel/Run" to="." method="_on_run_pressed"]
